--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Django==4.0 
-psycopg2-binary==2.9.3
+django==3.1.3
+psycopg2==2.8.6
+django-bootstrap-form
 django-allauth
 django-crispy-forms
 django-autoslug==1.9.8
 django-model-utils==4.1.0
-factory-boy==3.1.0
-ipython==7.19.0
-pillow==8.0.1
